@@ -18,8 +18,28 @@
 
 package org.apache.hadoop.hive.ql.processors;
 
-public interface CommandProcessor {
-  public void init();
+/**
+ * Encapsulates the basic response info returned by classes the implement the
+ * <code>CommandProcessor</code> interfaace. Typically <code>errorMessage</code>
+ * and <code>SQLState</code> will only be set if the <code>responseCode</code>
+ * is not 0.
+ */
+public class CommandProcessorResponse {
+  private int responseCode;
+  private String errorMessage;
+  private String SQLState;
 
-  public CommandProcessorResponse run(String command);
+  public CommandProcessorResponse(int responseCode) {
+    this(responseCode, null, null);
+  }
+
+  public CommandProcessorResponse(int responseCode, String errorMessage, String SQLState) {
+    this.responseCode = responseCode;
+    this.errorMessage = errorMessage;
+    this.SQLState = SQLState;
+  }
+
+  public int getResponseCode() { return responseCode; }
+  public String getErrorMessage() { return errorMessage; }
+  public String getSQLState() { return SQLState; }
 }
